--- a/login/templates/report_gadminfinan.html
+++ b/login/templates/report_gadminfinan.html
@@ -77,6 +77,9 @@
                     <button id="btn_compramed" class="btn btn-repor btn-lg" onclick="mostrarcompramed()">Reporte Compras Medicamentos</button>
                     <button id="btn_preciocanal" class="btn btn-repor btn-lg" onclick="mostrarpreciocanal()">Reporte Precio Canales</button>
                     <button id="btn_nuevosclientes" class="btn btn-repor btn-lg" onclick="mostrarnuevosclientes()">Reporte Nuevos Clientes</button>
+                    <a class="btn btn-repor btn-lg" href="{% url 'financiera' %}"><i class="nav-icon fas fa-city"></i> Desposte</a>
+                    
+                    
 
                 </div>
             </section>
