--- a/login/templates/financiera.html
+++ b/login/templates/financiera.html
@@ -4,14 +4,36 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    
+    {% block meta %}
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    {% endblock %}
+    
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
-
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+    {% block stylesheets %}
+    {% include 'adminlte/lib/_styles.html' %}
+    <style type="text/css">
+        .btn-circle.btn-xl {
+            width: 130px;
+            height: 130px;
+            padding: 13px 18px;
+            border-radius: 100px;
+            font-size: 15px;
+            text-align: center;
+            margin-left: 50px;
+        }
 
+        .btn-repor {
+            background-color: #651410;
+            color: aliceblue;
+        }
+    </style>
+    {% endblock %}
     <style>
         .valor-kilo {
             background-color: #e9e9e9;
@@ -30,7 +52,37 @@
     </style>
 </head>
 
-<body>
+<body class="hold-transition sidebar-mini {% block body_class %}{% block bodyclass %}{% endblock %}{% endblock %}">
+    <div class="wrapper">
+        {% block nav_header %}
+        {% include '_main_header.html' %}
+        {% endblock %}
+
+        {% block nav_sidebar %}
+        {% include '_main_sidebar.html' %}
+        {% endblock %}
+
+        {% block content_wrapper %}
+        <div class="content-wrapper">
+            {% block content_header %}
+            <section class="content-header">
+                {% block no_heading %}
+                <h1>
+                    {% block page_name %}{% endblock %}
+                    <div class="header-actions">
+                        {% block page_actions %}{% endblock %}
+                    </div>
+                    {% block no_description %}
+                    <small>{% block page_description %}{% endblock %}</small>
+                    {% endblock %}
+                </h1>
+                {% block breadcrumbs %}
+                {# Breadcrumb implementation left to developers #}
+                {% endblock %}
+                {% endblock no_heading %}
+                <h1>Desposte</h1>
+            </section>
+            {% endblock %}{% endblock %}
     <div class="content-nowrapper">
         <div class="content custom-container">
             <section class="container">
@@ -122,12 +174,19 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <script src="{% static 'custom.js' %}"></script>
+    {% block javascript %}
+    {% include 'adminlte/lib/_scripts.html' %}
+    
+    {% endblock %}
     <script>
 
 
-
+        $(document).ready(function () {
+            $('#example1').DataTable();
+        });
         $(document).ready(function () {
             // Inicializar los datepickers
             $("#datepicker-start").datepicker({
@@ -344,19 +403,7 @@
             // Evento click para el botón de generar informe en Excel
 
         });
-        $(document).ready(function () {
-            // Configurar DataTables
-            $('#example1').DataTable({
-                "paging": true, // Habilitar paginación
-                "pageLength": 20, // Establecer el número de filas por página
-                "lengthChange": false, // Deshabilitar el control de cambio de número de filas por página
-                "searching": false, // Deshabilitar la función de búsqueda
-                "info": false, // Deshabilitar la información de la paginación
-                "ordering": true, // Habilitar la ordenación de columnas
-                "responsive": true // Habilitar la funcionalidad responsive
-
-            });
-        });
+       
        
 
 
