--- a/login/templates/remision.html
+++ b/login/templates/remision.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>comercial</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.13/jspdf.plugin.autotable.min.js"></script>
+
 
 
     {% block meta %}
@@ -36,7 +39,9 @@
     </style>
     {% endblock %}
 
-    {% block extra_head %}{% endblock %}
+    {% block extra_head %}
+
+    {% endblock %}
 </head>
 </head>
 
@@ -72,11 +77,20 @@
             </section>
             {% endblock %}{% endblock %}
             <section>
-                <div class="row">
-                    <div class="col-3"><input type="number" class="form-control" placeholder="Numero Remision"></div>
-                    <button id="btn_remisionnew" class="btn btn-repor btn-lg" onclick="mostrarremisionnew()">BUSCAR</button>
-                </div>
+                <form id="consultaForm">
+                    <div class="row">
+                        <div class="col-3"><input type="number" class="form-control" id="consecutivoCercafe"
+                                name="consecutivoCercafe" placeholder="Consecutivo Cercafe"></div>
+                        <button type="submit" class="btn btn-repor btn-lg">Consultar</button>
+                    </div>
+                    <div class="row">
+                        <button id="generatePdfBtn" class="btn btn-primary">Generar PDF</button>
+
+
+                    </div>
+                </form>
             </section>
+
 
             <!-- Contenido principal -->
             <div class="contener">
@@ -86,9 +100,9 @@
                         <div class="card-header">
                             <h3 class="card-title">REMISION</h3>
                         </div>
-                    
+
                         <div class="card-body">
-                            <table id="tabla_remisionnew" class="table table-bordered table-hover " >
+                            <table id="tabla_remisionnew" class="table table-bordered table-hover ">
                                 <thead>
                                     <tr>
                                         <th>Consecutivo Despacho</th>
@@ -104,32 +118,32 @@
                                         <th>Registro IC</th>
                                         <th>Registro ICA</th>
                                         <th>Retiro de Alimento</th>
-                                        
+
                                     </tr>
                                 </thead>
 
 
-                                    {% for remisionne in remisionnew %}
-                                    <tr>
-                                        <td>{{ remisionne.0 }}</td>
-                                        <td>{{ remisionne.1 }}</td>
-                                        <td>{{ remisionne.2 }}</td>
-                                        <td>{{ remisionne.3 }}</td>
-                                        <td>{{ remisionne.4 }}</td>
-                                        <td>{{ remisionne.5 }}</td>
-                                        <td>{{ remisionne.6 }}</td>
-                                        <td>{{ remisionne.7 }}</td>
-                                        <td>{{ remisionne.8 }}</td>
-                                        <td>{{ remisionne.9 }}</td>
-                                        <td>{{ remisionne.10 }}</td>
-                                        <td>{{ remisionne.11 }}</td>
-                                        <td>{{ remisionne.12 | date:"d/m/Y H:i:s" }}</td> 
-                                       
-                                        
+                                {% for remisionne in remisionnew %}
+                                <tr>
+                                    <td>{{ remisionne.0 }}</td>
+                                    <td>{{ remisionne.1 }}</td>
+                                    <td>{{ remisionne.2 }}</td>
+                                    <td>{{ remisionne.3 }}</td>
+                                    <td>{{ remisionne.4 }}</td>
+                                    <td>{{ remisionne.5 }}</td>
+                                    <td>{{ remisionne.6 }}</td>
+                                    <td>{{ remisionne.7 }}</td>
+                                    <td>{{ remisionne.8 }}</td>
+                                    <td>{{ remisionne.9 }}</td>
+                                    <td>{{ remisionne.10 }}</td>
+                                    <td>{{ remisionne.11 }}</td>
+                                    <td>{{ remisionne.12 | date:"d/m/Y H:i:s" }}</td>
+
+
                                     {% endfor %}
 
 
-                                </tbody>
+                                    </tbody>
                             </table>
                         </div>
                     </div>
@@ -148,23 +162,63 @@
             {% include 'adminlte/lib/_scripts.html' %}
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
             <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+
             <script>
-                function mostrarremisionnew() {
-                    document.getElementById("remisionnew_table").style.display = "block";
-                   
-                }
-
-               
                 $(document).ready(function () {
-                    $('#tabla_remisionnew').DataTable();
+                    $('#consultaForm').submit(function (event) {
+                        event.preventDefault();
 
-                    $("#tabla_ventas").DataTable({
-                        "responsive": true, "lengthChange": false, "autoWidth": false,
-                        "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
-                    }).buttons().container().appendTo('#tabla_ventas_wrapper .col-md-6:eq(0)');
+                        var consecutivoCercafe = $('#consecutivoCercafe').val(); // Obtener el valor del input
+                        $.ajax({
+                            type: 'GET',
+                            url: '{% url "repremision" %}',
+                            data: { consecutivoCercafe: consecutivoCercafe },
+                            dataType: 'json', // Especificar que esperamos JSON como respuesta
+                            success: function (response) {
+                                // Limpiar la tabla antes de agregar nuevas filas
+                                $('#tabla_remisionnew tbody').empty();
 
+                                // Verificar si la respuesta contiene los datos de la tabla
+                                if ('remisionnew' in response) {
+                                    var remisionnew = response.remisionnew;
+                                    // Iterar sobre los datos y agregar filas a la tabla
+                                    $.each(remisionnew, function (index, data) {
+                                        var row = '<tr>';
+                                        row += '<td>' + data[0] + '</td>';
+                                        row += '<td>' + data[1] + '</td>';
+                                        row += '<td>' + data[2] + '</td>';
+                                        row += '<td>' + data[3] + '</td>';
+                                        row += '<td>' + data[4] + '</td>';
+                                        row += '<td>' + data[5] + '</td>';
+                                        row += '<td>' + data[6] + '</td>';
+                                        row += '<td>' + data[7] + '</td>';
+                                        row += '<td>' + data[8] + '</td>';
+                                        row += '<td>' + data[9] + '</td>';
+                                        row += '<td>' + data[10] + '</td>';
+                                        row += '<td>' + data[11] + '</td>';
+                                        row += '<td>' + data[12] + '</td>';
+                                        row += '</tr>';
+                                        $('#tabla_remisionnew tbody').append(row);
+                                    });
+                                    // Mostrar la tabla después de agregar los datos
+                                    $('#remisionnew_table').show();
+                                    // Inicializar el plugin DataTable en la tabla actualizada
+                                    $('#tabla_remisionnew').DataTable();
+                                } else {
+                                    console.error('Error: No se recibieron datos válidos desde el servidor');
+                                }
+                            },
+                            error: function (xhr, status, error) {
+                                console.error('Error en la solicitud AJAX:', error);
+                            }
+                        });
+                    });
                 });
+                
             </script>
+
+
+
             <!-- script para llamar los html en el contenido -->
             <script src="{% static 'custom.js' %}"></script>
             {% endblock %}
