--- a/login/templates/_main_sidebar.html
+++ b/login/templates/_main_sidebar.html
@@ -6,7 +6,7 @@
     <!-- Brand Logo -->
     {% block logo %}
     <a href="/home/" class="brand-link">
-        <img src="{%static 'admin-lte/dist/img/logoside.png' size=90 %}" alt="AdminLTE Logo"
+        <img src="{%static 'admin-lte/dist/img/logoside.png' size=90 %}" alt="Cercafe Logo"
             class="brand-image img-circle elevation-3" style="opacity: .8">
         {% block logo_text %}<span class="brand-text font-weight-dark">CERCAFE CS </span>{% endblock %}
     </a>
