--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -99,7 +99,7 @@ background-position-x: 50%;" >
                 
                 <!-- /.social-auth-links -->
                 <p class="mb-1">
-                    <a href="contraseñaolvidada">Olvidaste Contraseña?</a>
+                    <a href="reset_password">Olvidaste Contraseña?</a>
                 </p>
                 
 
